# Zephyr-MAX32664C

./: .gitignore  CMakeLists.txt  Kconfig.max32664c  README.md  max32664c.c  max32664c_worker.c  prj.conf  west.yml
BLEHeartRateEval/: .gitignore  settings.gradle.kts
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  prj.conf  west.yml
app/boards/: hr.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_v2.overlay
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/sensor/: CMakeLists.txt  Kconfig  max32664c.h
app/drivers/sensor/max32664c/: CMakeLists.txt  Kconfig  max32664c.c  max32664c.h  max32664c_acc.c  max32664c_bl.c  max32664c_ext.h  max32664c_init.c  max32664c_interrupt.c  max32664c_worker.c
app/dts/bindings/sensor/: maxim,max32664c.yml
app/patches/zephyr/: 0001-drivers-sensor-Add-driver-for-MAX32664C.patch  0001-drivers-sensors-Add-health-measurement-to-sensor-API.patch  0002-add_fw_version_read.patch  0002-drivers-sensors-MAX32664C-improvements.patch
app/scripts/: README.md  hr_plotter.py  raw_hr_data_plotter.py  test_with_buttons.txt
app/src/: main.c
app/src/Loader/: max32664c_bl.c
app/src/firmware/: MAX32664C_HSP2_WHRM_AEC_SCD_WSPO2_C_30_13_31.h
app/src/firmware/MAX32664C_30.13.31/: SensorHubAPI_v1.158.xlsx
app/src/firmware/MAX32664C_MAXM86161_WHRM_AEC_SCD_WSPO2_C_32.9.23/: MAX32664C_OS58_I2C_1PD_WHRM_AEC_SCD_WSPO2_C_32.9.23.msbl  MAX32664C_OS58_I2C_1PD_WHRM_AEC_SCD_WSPO2_Z_32.9.23.msbl  MAX32664_Application_Programming.pptx
app/sysbuild/ipc_radio/: prj.conf
app/sysbuild/ipc_radio/boards/: nrf5340dk_nrf5340_cpunet.overlay
boards/: hr.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
drivers/: Kconfig
src/: main.c
(+117 files in other folders)
